Вроде как готовы все тесты по сущности User в Server. Спринт 16, Ревью 1, Версия проекта 3